# digital_squad

./: .gitignore  main.py  pyproject.toml  test.py
app/: config.py  llm.py  logger.py  schema.py
app/agent/: __init__.py  base.py  react.py  toolcall.py
app/prompts/: default.py
app/tools/: askuser.py  base.py  math.py  multiply.py  search.py  wikipedia.py
